--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
+    "axios": "^0.22.0",
     "bulma": "^0.9.3",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7"
